# cubic

./: .gitignore  CMakeLists.txt  cbi_file_format.md  cube.c  dev_memo.md  test.cbi
fatfs/: ffconf.h  mmc_pico_spi.c
hardware/: circuit.odg  io.ods
